src/Bicep.Core.Samples/Files/baselines/InvalidExtensions_CRLF/child/hasConfigurableExtensionsWithAlias.bicep
extension kubernetes as k8s
extension 'br:mcr.microsoft.com/bicep/extensions/hasoptionalconfig/v1:1.2.3' as extWithOptionalConfig1
